přidání správy komunikací - bez STRONGu

--- a/speedtranspages/index.html
+++ b/speedtranspages/index.html
@@ -328,6 +328,36 @@
                   <td>600 000,- Kč</td>
                   <td>20 000,- Kč</td>
                 </tr>
+                <tr>
+                  <td>Správa komunikací</td>
+                  <td>Správa komunikací</td>
+                  <td>Správa komunikací</td>
+                </tr>
+                <tr>
+                  <td>Zkušební doba</td>
+                  <td>0,- Kč</td>
+                  <td>500,- Kč</td>
+                </tr>
+                <tr>
+                  <td>Správa komunikací I.</td>
+                  <td>50 000,- Kč</td>
+                  <td>2 000,- Kč</td>
+                </tr>
+                <tr>
+                  <td>Správa komunikací II.</td>
+                  <td>150 000,- Kč</td>
+                  <td>4 000,- Kč</td>
+                </tr>
+                <tr>
+                  <td>Správa komunikací III.</td>
+                  <td>300 000,- Kč</td>
+                  <td>9 000,- Kč</td>
+                </tr>
+                <tr>
+                  <td>Správa komunikací IV.</td>
+                  <td>500 000,- Kč</td>
+                  <td>15 000,- Kč</td>
+                </tr>
               </tbody>
             </table>
           </div>
