--- a/speedtranspages/index.html
+++ b/speedtranspages/index.html
@@ -329,9 +329,9 @@
                   <td>20 000,- Kč</td>
                 </tr>
                 <tr>
-                  <td>Správa komunikací</td>
-                  <td>Správa komunikací</td>
-                  <td>Správa komunikací</td>
+                  <td><strong>Správa komunikací</strong></td>
+                  <td><strong>Správa komunikací</strong></td>
+                  <td<strong>>Správa komunikací</strong></td>
                 </tr>
                 <tr>
                   <td>Zkušební doba</td>
