--- a/speedtranspages/index.html
+++ b/speedtranspages/index.html
@@ -302,6 +302,11 @@
               </thead>
               <tbody>
                 <tr>
+                  <td><strong>Řidič kamionu</strong></td>
+                  <td> </td>
+                  <td </td>
+                </tr>
+                <tr>
                   <td>Zkušební doba</td>
                   <td>0,- Kč</td>
                   <td>500,- Kč</td>
@@ -330,8 +335,8 @@
                 </tr>
                 <tr>
                   <td><strong>Správa komunikací</strong></td>
-                  <td><strong>Správa komunikací</strong></td>
-                  <td<strong>>Správa komunikací</strong></td>
+                  <td> </td>
+                  <td </td>
                 </tr>
                 <tr>
                   <td>Zkušební doba</td>
