--- a/speedtranspages/index.html
+++ b/speedtranspages/index.html
@@ -377,7 +377,7 @@
               <span class="text-muted">Protože to není jedno</span>
             </h2>
             <p class="lead">
-              Aktualně vlastníme 3 tahače Scania R580 V8 z roku 2011 a jednu dodávku Mercedes-Benz Sprinter z roku 2019.
+              Aktualně vlastníme 3 tahače Scania R580 V8 z roku 2011 a jednu dodávku Mercedes-Benz Sprinter z roku 2019. Ohledně správy komunikací jdeme cestou klasiky, disponujeme dvěmi odtahovkami Ford F100 Towtruck.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
