--- a/speedtranspages/index.html
+++ b/speedtranspages/index.html
@@ -251,6 +251,8 @@
               <a class="btn btn-secondary" href="#">View details &raquo;</a>
             </p>
           </div>
+        
+        <hr class="featurette-divider" />
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img
@@ -268,6 +270,27 @@
             <h6>Zájmy</h6>
             <p>Fotbal, motosport, podnikání.</p>
             <h6>696 700, michael.cadllac@post.ic</h6>
+            <p>
+              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+            </p>
+          </div>
+  
+            <div class="col-lg-4">
+            <img
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              src="https://i.imgur.com/Z9JyB59.png"
+              aria-label="Placeholder: 140x140"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            ></img>
+
+            <h2>Orlando Anderson</h2>
+            <h4>Personalista</h4>
+            <h6>Zájmy</h6>
+            <p>Cvičení, podnikání, rychlá auta.</p>
+            <h6>407 413, orlando.anderson@post.ic</h6>
             <p>
               <a class="btn btn-secondary" href="#">View details &raquo;</a>
             </p>
