--- a/speedtranspages/index.html
+++ b/speedtranspages/index.html
@@ -206,7 +206,7 @@
 
       <div id="kontakt" class="container marketing">
         <!-- Three columns of text below the carousel -->
-        <div class="container">
+        <div class="row">
           <div class="col-lg-4">
             <img
               class="bd-placeholder-img rounded-circle"
